--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Cyty Station</title>
-	<meta property="og:image" content="1up-hell.gif"/>
-
+	<title>City Station</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta http-equiv="content-script-type" content="text/javascript" />
 	<meta http-equiv="content-style-type" content="text/css" />
